themes/cgc/assets/css/main.css
:root {
  /* Main colors */
  --blacks-dark: #050505;
  --blacks-med: #2d262d;
  --blacks-light: #544d55;
  --whites-light: #f7f6fb;
  --whites-med: #f1f1f1;
  --whites-dark: #dfdfdf;

  /* Secondary colors - Accents, Buttons, etc */
  --reds-dark: #7b0a02;
  --reds-med: #be1a11;
  --red-light: #dc4740;
  --greens-dark: #39bf2a;
  --greens-med: #5bd350;
  --green-light: #8bde84;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Atkinson Hyperlegible", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  width: max-content;
}

body {
  color: var(--blacks-med);
  font-family: Cambria, sans-serif;
  line-height: 1.5;
  margin: 0;
  background: var(--whites-dark);
  font-size: 1.2rem;
}

header {
  font-family: "Atkinson Hyperlegible", Calibri, sans-serif;
}

.head-box {
  width: 100%;
  height: 500px;
  background-color: var(--green-light);
  background: url('../img/fleshBeast.jpeg') top -25px center;;
  background-repeat: no-repeat;
  background-size: cover;
}

.container {
  width: 60%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  height: 100%;
  position: relative;
}

.head-box-inner {
  width: 60%;
  padding: 2rem;
  color: var(--whites-med);
  position: absolute;
  top: 13.5rem;
  text-shadow: 0px 2px 2px #363636;
}

.head-box-inner h2 {
  margin: 0;
  padding: 0;
}

.head-box-inner p {
  padding: 0 0 1rem;
  margin: 1rem 0;
}

.big-title {
  font-weight: bold;
  font-size: 2rem;
}

footer {
  color: var(--whites-med);
  margin-top: 1rem;
  width: 100%;
  height: min-content;
  background: var(--blacks-med);
  padding: 2rem 0;
}

main {
  font-family: Calibri, sans-serif;
  margin: 3rem auto;
  width: 60%;
}

a {
  color: var(--blacks-med);
  font-weight: bold;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

nav {
  background: var(--whites-light);
  width: 100%;
  font-family: "Atkinson Hyperlegible", sans-serif;
  height: 100px;
  box-shadow: 0 5px 10px 0 #646464;
  border-bottom: 2px solid var(--greens-med);
  z-index: 2001;
  backdrop-filter: blur(10px);
}

nav a {
  color: var(--blacks-light);
  font-weight: normal;
}

nav.menu .container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logo {
  align-items: flex-start;
  width: 50%;
  font-weight: 800;
}

nav ul {
  list-style: none;
  margin: 0 0 0 2rem;
  padding: 0;
  display: flex;
  align-items: center;
  height: 100%;
  width: 50%;
}

nav ul li {
  margin-right: 1rem;
  padding: 0.5rem;
}

/* Buttons */

.btn {
  padding: 0.5rem 1rem;
  color: var(--whites-light);
  font-weight: normal;
}

.btn:hover {
  text-decoration: none;
  background-color: var(--blacks-light);
}

.btn-primary {
  background: var(--reds-dark);
}

.btn-primary:hover {
  background: var(--red-light);
}

.btn-secondary {
  background: var(--greens-dark);
}

.btn-secondary:hover {
  background: var(--green-light);
}

.box-card-list {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(3, minmax(250px, 1fr));
  list-style: none;
  padding: 0;
}

.card-item {
  border: 1px solid #b5b3bd;
  padding: 1rem 2rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-radius: 10px;
  color: #817e8d;
}

.card-item:hover {
  border: 1px solid #8c8b94;
  color: #42414d;
  text-decoration: none;
}

.card-head {
  border-left: 1px solid #b5b3bd;
  width: 70%;
  padding: 0 2rem;
}

.card-icon {
  width: 30%;
  align-items: center;
  display: flex;
  justify-content: center;
  padding-right: 2rem;
}

.blog-card-list {
  margin-top: 3rem;
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(3, minmax(250px, 1fr));
  list-style: none;
  padding: 0;
}

.blog-card-item {
  border: 1px solid #b5b3bd;
  border-radius: 10px;
}

.blog-card-list img {
  width: 100%;
  height: 200px;
  object-fit: cover; 
  border-radius: 10px 10px 0 0;
}

.blog-card-head {
  border-bottom: 1px solid #b5b3bd;
  margin: 1rem;
  padding-bottom: 1rem;
}

.blog-card-head h4 {
  margin: 0;
  padding: 0;
}

.blog-card-body {
  padding: 0 2rem;
}

.blog-card-meta {
  display: flex;
  justify-content:left;
  align-items: center;
  font-size: 1rem;
  margin-top: 0.5rem;
  background: #cac6c6;
  padding: 0 0.5rem;
  color: #727070;
}

.blog-card-meta i {
  margin-right: 0.25rem;
  scale: 0.8;
  vertical-align: middle;
}

.blog-card-meta span {
  margin-right: 0.5rem;
}

.box-card-list .material-symbols-outlined {
  transform: scale(3);
}

.home-blurb {
  margin-bottom: 3rem;
  border-left: 4px solid var(--reds-dark);
  padding: 2rem;
  background: var(--whites-light);
}

